merged manually