@@ -2,6 +2,7 @@ package cs3500.pa05.controller;
 
 import cs3500.pa05.model.Calendar;
 import cs3500.pa05.model.ParseToFile;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import javafx.event.Event;
 import javafx.event.EventHandler;
@@ -27,6 +28,12 @@ public class SaveButtonHandler implements EventHandler {
   @Override
   public void handle(Event event) {
     ParseToFile parseToFile = new ParseToFile();
-    parseToFile.writeToFile(Paths.get(this.calendar.getBujoPath()), this.calendar);
+    if (!this.calendar.getIsTemp()) {
+      parseToFile.writeToFile(Paths.get(this.calendar.getBujoPath()), this.calendar);
+    } else {
+      Path path =
+          Path.of("NewBujo/.bujo");
+      parseToFile.writeToFile(path, this.calendar); //cahnged this
+    }
   }
 }
